Fix minor alignment CSS for CRUD module
ref #10

--- a/src/modules/CRUD/styles.scss
+++ b/src/modules/CRUD/styles.scss
@@ -18,6 +18,6 @@
   position: relative;
   flex-direction: column;
   height: 100%;
-  justify-content: flex-end;
+  justify-content: center;
   overflow: hidden;
 }
